syntax = "proto3";

package github.com.vldem.tb2.api;
option go_package = "github.com/vldem/go-code-example/telbot_v2/pkg/api;api";

import "google/api/annotations.proto";

service Admin {
  rpc UserCreate(UserCreateRequest) returns (UserCreateResponse) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }

  rpc UserGet(UserGetRequest) returns (UserGetResponse) {
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }

  rpc UserList(UserListRequest) returns (UserListResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  rpc UserUpdate(UserUpdateRequest) returns (UserUpdateResponse) {
    option (google.api.http) = {
      put: "/v1/user"
      body: "*"
    };
  }

  rpc UserDelete(UserDeleteRequest) returns (UserDeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/user"
      body: "*"
    };
  }

}

// ---------------------------------------------------------------------------------------------------------------------
// UserCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message UserCreateRequest {
    string email    = 1;
    string name     = 2;
    string role     = 3;
    string password = 4;
  }
  message UserCreateResponse {}

  // ---------------------------------------------------------------------------------------------------------------------
  // UserList endpoint messages
  // ---------------------------------------------------------------------------------------------------------------------

  message UserListRequest {}
  message UserListResponse {
    repeated User users = 1;

    message User {
      uint64 id    = 1;
      string email = 2;
      string name  = 3;
      string role  = 4;
    }
  }

  // ---------------------------------------------------------------------------------------------------------------------
  // UserUpdate endpoint messages
  // ---------------------------------------------------------------------------------------------------------------------

  message UserUpdateRequest {
    uint64 id          = 1;
    string email       = 2;
    string name        = 3;
    string role        = 4;
    string password    = 5;
    string oldpassword = 6;
  }
  message UserUpdateResponse {}

  // ---------------------------------------------------------------------------------------------------------------------
  // UserDelete endpoint messages
  // ---------------------------------------------------------------------------------------------------------------------

  message UserDeleteRequest {
    uint64 id       = 1;
    string password = 2;
  }
  message UserDeleteResponse {}

  // ---------------------------------------------------------------------------------------------------------------------
  // UserGet endpoint messages
  // ---------------------------------------------------------------------------------------------------------------------

  message UserGetRequest {
    uint64 id       = 1;
  }
  message UserGetResponse {
    uint64 id    = 1;
    string email = 2;
    string name  = 3;
    string role  = 4;
  }
